<resources>

    <string name="Categoria">Categoria</string>
    <string name="Name_Categoria">Nombre</string>
    <string name="Descripcion_Categoria">Descripcion</string>
    <string name="app_name">Pedidos de Venta</string>
    <string name="title_activity_login">CreVentaApp</string>
    <string name="title_activity_Categoria">Categorias</string>
    <string name="apptitle">CreVentaApp</string>

    <string name="btnAgregar">Agregar</string>
    <string name="btnMostrar">Mostrar</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="emptyList">Eliminar</string>
    <string name="precio">Precio</string>
    <string name="Codigo">Codigo</string>
    <string name="Costo">Costo</string>
    <string name="efectivo">Efectivo</string>
    <string name="cambio">Cambio</string>
    <string name="cantidad">Cantidad</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_unidad_mostrar">UnidadMostrar</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_item">Home</string>
    <string name="productos_item">Productos</string>
    <string name="compras_item">Carrito</string>
    <string name="ordenes_item">Ordenes</string>
    <string name="facturas_item">Facturas</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuración</string>
    <string name="title_activity_menuprincipal_original">Principal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabshowsalesorder">Pedidos</string>
    <string name="tab_text_1">Encabezado</string>
    <string name="tab_text_2">Detalle</string>
    <string name="tab_text_3">Totales</string>

    <string name="total">Total: </string>
    <string name="totald">Total</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="consultar">Consultar</string>


</resources>
