<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalestableFacturadoFragment">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/btnconsultarfacturas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/consultar" />

    <EditText
        android:id="@+id/etPlannedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/desde"
        android:inputType="date"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:maxLines="1" />


    <EditText
        android:id="@+id/edthasta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/hasta"
        android:layout_gravity="top"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:inputType="date"
        android:maxLines="1" />



    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_gravity="top"
        android:layout_marginTop="145dp"
        android:background="@android:color/black" />


    <ListView
        android:id="@+id/listafacturadosenca"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="150dp" />


    <View
        android:id="@+id/viewdos"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="90dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/txttotall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="70dp"
        android:text="@string/total" />

    <TextView
        android:id="@+id/txttotalm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="70dp"
        />

</FrameLayout>