<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Additem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtcoditem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Codigo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtnombreitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Name_Categoria"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/spCategoriaItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spUnidaditem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtprecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/precio"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edtcosto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Costo"
            android:inputType="numberDecimal" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnadditem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fabSize="normal"
            app:srcCompat="@android:drawable/ic_input_add" />

        <LinearLayout
            android:id="@+id/layoutitem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnedititem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="top"
                app:fabSize="normal"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btndeleteitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="top"
                app:fabSize="normal"
                app:srcCompat="@android:drawable/ic_menu_delete" />


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>