<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateCategoria"
    tools:layout_editor_absoluteY="81dp">




    <LinearLayout
        android:id="@+id/linearLayoutH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Name_Categoria"
            android:inputType="textPersonName" />



        <EditText
            android:id="@+id/et_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Descripcion_Categoria"
            android:layout_weight="2"
            android:inputType="textPersonName" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/btneliminar"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginEnd="34dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginStart="34dp"
            android:layout_weight="0"
            android:text="@string/btnEliminar"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/loHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tooltipText="Editar Categoria"

                app:fabSize="normal"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnfeliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tooltipText="Eliminar Categoria"
                app:fabSize="normal"

                app:srcCompat="@android:drawable/ic_delete" />


        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btnguardar"
        android:layout_width="440dp"
        android:layout_height="110dp"
        android:text="@string/btnActualizar"
        android:visibility="invisible" />


</android.support.constraint.ConstraintLayout>