<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Addsalesline">


    <LinearLayout
        android:id="@+id/lyoutsaleslineadd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Spinner
            android:id="@+id/spinnerundpeddetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/spinnercatpeddetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Spinner
            android:id="@+id/spinneritempeddetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtcantpeddetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cantidad"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edtpreciopeddetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/precio"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edttotalpeddetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/totald"
            android:inputType="numberDecimal" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnaddsalesline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:fabSize="normal"
            app:srcCompat="@android:drawable/ic_input_add" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >



        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btndeletesalesline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fabSize="normal"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            />



    </LinearLayout>




</android.support.constraint.ConstraintLayout>